--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,15 @@
 body {
   font-family: Apple Chancery, cursive;
-  
 }
 /*Navbar*/
 nav {
   z-index: 2;
-  
 }
 
 nav a.nav-link {
   font-weight: 500;
   letter-spacing: 0.6px;
   cursor: pointer;
-  
 }
 
 nav ul li {
@@ -70,11 +67,15 @@ nav ul li {
   }
 }
 /**************About****************/
-.photo-wrap{
-  display:flex;
+.photo-wrap {
+  display: flex;
   justify-content: center;
   align-items: center;
-  
+  text-align: justify;
+}
+
+p {
+  text-align: justify;
 }
 
 .profile-img {
@@ -84,14 +85,70 @@ nav ul li {
   border: 3px solid rgba(253, 188, 68, 0.87);
 }
 
-.about-heading{
-  color:rgba(253, 188, 68, 0.87);
+.about-heading {
+  color: rgba(253, 188, 68, 0.87);
   text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@media(max-width:468px) {
-  .profile-img{
-    width:10rem;
-    
+@media (max-width: 468px) {
+  .profile-img {
+    width: 10rem;
   }
 }
+
+/************Skills*************/
+
+.Skills {
+  text-align: center;
+  padding-bottom: 2rem;
+  background: rgb(247, 245, 245);
+}
+
+.Skills h1 {
+  text-decoration: uppercase;
+}
+
+.Skills .circle {
+  position: relative;
+  margin: 0.375rem auto;
+  background-color: rgba(253, 188, 68, 0.87);
+  border-radius: 50%;
+  width: 2.135rem;
+  height: 2.135rem;
+ 
+}
+
+.Skills .icon {
+  font-size: 1.4rem;
+color:white;
+  position: absolute;
+  top: 50%;
+  bottom: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.Skills .box{
+  height:10rem;
+  border:0.3125rem solid rgba(253, 188, 68, 0.87);
+  padding:0.625rem;
+  margin-bottom:1.875rem;
+    
+}
+
+.Skills .box:hover{
+  background: rgba(253, 188, 68, 0.87);
+  border-color:black;
+  }
+
+  .Skills .box:hover .icon{
+
+color:black;
+  }
+
+  .Skills .box:hover .circle{
+
+background:white
+  }
