--- a/src/App.css
+++ b/src/App.css
@@ -134,6 +134,7 @@ color:white;
   border:0.3125rem solid rgba(253, 188, 68, 0.87);
   padding:0.625rem;
   margin-bottom:1.875rem;
+  transition:0.4s ease-in-out
     
 }
 
