--- a/src/App.css
+++ b/src/App.css
@@ -264,6 +264,7 @@ background:white
     padding:3rem 0;
     justify-content: center;
     
+    
    
     }
 
@@ -296,15 +297,21 @@ background:white
       cursor:pointer;
     }
 
-    .portfolio-image-box:hover .overflow{
-   
-      transition: 0.3s ease-in-out;
+    
 
-    }
 
     .button{
       margin:10px;
-      margin-top:80px;
+      margin-top:90px;
+    }
+    .portfolio-image-box p{
+
+     height: 30px;
+      padding:10px;
+     text-align: center;
+     font-weight: 500;
+
+
     }
 
 
