--- a/src/App.css
+++ b/src/App.css
@@ -332,11 +332,11 @@ background:white
       margin-top:90px;
     }
     .portfolio-image-box p{
-
-     height: 30px;
+      height: 40px;
       padding:10px;
      text-align: center;
-     font-weight: 500;
+     font-weight: 300;
+     font-size: .75rem;
 
 
     }
